--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.0.3"
   }
 }
